# splat

./: .gitignore  Makefile  README.md  io_core.py  io_core.v  io_core_tb.vcd  manta.yaml  plan.md  pyproject.toml  sim.py  splat.yaml  test.py  verilog.py
.github/workflows/: run_tests.yaml
ref/: __init__.py  io_core_tb.sv  up_counter.py  up_counter.v
src/: logo.py  splat.py
src/splat/: __init__.py  cli.py  io_core.py  logic_analyzer_core.py  memory_core.py  splat.py  uart.py  utils.py
src/splat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: sim.py  splat.yaml  test_bridge_rx.py  test_bridge_tx.py  test_bridge_tx_sim.py  test_build_io_core.py  test_io_core.py  test_io_core_hardware.py  test_io_core_hw.py  test_io_core_sim.py  test_logic_analyzer_core_hw.py  test_logic_analyzer_hw.py  test_logic_analyzer_sim.py  test_mem_core.py  test_mem_core_hardware.py  test_mem_core_hardware.yaml  test_mem_core_hw.py  test_mem_core_sim.py  test_toolchains.py  test_uart.py  test_uart_rx.py  test_uart_tx.py  test_uart_tx_sim.py  test_verilog_gen.py  verilog.py
