[project]
name = "splat"
version = "0.0.1"
authors = [
  { name="Fischer Moseley", email="fischerm@mit.edu" },
]
description = "An In-Situ Debugging Tool for Programmable Hardware"
readme = "README.md"
dependencies = [
  "PyYAML",
  "pyserial",
  "pyvcd",
  "scapy"
]

requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/fischermoseley/splat"

[project.scripts]
splat = "splat:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"